--- a/dest/styles.css
+++ b/dest/styles.css
@@ -865,6 +865,8 @@ body {
   background: #000;
   color: #fff;
   font-family: 'Nunito', sans-serif; }
+  body .logo {
+    text-align: center; }
   body .navbar .navbar-inner {
     background: none; }
     body .navbar .navbar-inner .nav li a {
@@ -873,10 +875,12 @@ body {
     body .navbar .navbar-inner .nav .active a {
       color: #000; }
   body .jumbotron {
-    position: relative; }
+    position: relative;
+    margin: 0px; }
     body .jumbotron .header-txt {
       position: absolute;
-      padding: 20px; }
+      padding: 20px;
+      margin-top: 64px; }
   body .main-content {
     position: relative; }
     body .main-content .header-txt {
@@ -888,6 +892,9 @@ body {
     text-decoration: none;
     text-align: center;
     color: #fff; }
+  body .row-fluid {
+    text-align: center;
+    margin: 20px 0px; }
 
 @media screen and (max-width: 767px) {
   body .jumbotron .header-txt {
