--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,11 @@ body {
 	color: #fff;
 	font-family: 'Nunito', sans-serif;
 
+	.logo {
+		text-align: center; 
+
+	}
+
 	.navbar {
 		.navbar-inner {
 			background: none;
@@ -27,11 +32,12 @@ body {
 
 	.jumbotron {
 		position: relative;
-
+		margin: 0px;
 
 		.header-txt { 
 			position: absolute; 
 			padding: 20px;
+			margin-top: 64px;
 		}
 
 	}
@@ -53,6 +59,11 @@ body {
 			text-align: center;
 			color: #fff;
 		}
+	}
+
+	.row-fluid {
+		text-align: center;
+		margin: 20px 0px;
 	}
 }
 
