--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,6 +10,12 @@ body {
 	color: #fff;
 	font-family: 'Nunito', sans-serif;
 
+	#main-nav {
+		margin-left: 20px;
+	}
+
+	
+
 	.ui.text.menu {
 		.header.item {
 			color: #fff;
@@ -51,6 +57,16 @@ body {
 		position: relative;
 		margin: 0px;
 		min-height: 400px;
+		
+
+		.banner-img {
+			display: block;
+			width: 100%;
+			img {
+				width: 100%;
+				border: 2px solid #fff;
+			}
+		}
 
 		.header-txt { 
 			position: absolute; 
@@ -66,6 +82,7 @@ body {
 
 	.main-content {
 		position: relative;
+		background: #000;
 		.header-txt {
 			position: relative;
 			padding: 20px;
@@ -99,6 +116,10 @@ body {
 				font-size: 29px;
 			}
 		}
+	}
+	.portfolio {
+		padding-top: 20px;
+		padding-bottom: 20px;
 	}
 }
 
